# TestBotFastApiAiogram

./: .gitignore  Dockerfile  README.md  pyproject.toml
aiogram_app/: .env  Dockerfile  bot.py  pyproject.toml
alembic/: env.py
alembic/versions/: b60e31a2fe3c_first.py
fastapi_app/: main.py
fastapi_app/api_v1/: routers.py  schedule_task.py  validators.py
fastapi_app/api_v1/controllers/: __init__.py  product.py
fastapi_app/core/: config.py  db.py  http_client.py
fastapi_app/crud/: product.py
fastapi_app/models/: base.py  product.py
fastapi_app/schemas/: base.py  product.py
infra/: .env  .env-example  app.sh  docker-compose.yml
